Cleaning Finished. Starting Matches Engineering and getting player info

--- a/01_Obtain_data/01_get_events_by_year.ipynb
+++ b/01_Obtain_data/01_get_events_by_year.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "5aaf4b83-5946-47a4-b584-a51ae5e0b4df",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "392b2ca7-2d44-4eb4-acc3-4518394a7e5a",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "34c7c359-09d4-4d83-9dbb-6bca899cd2a3",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "8cf1c49d-a265-448a-978d-84117bc8d8c2",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,13 @@
      "text": [
       "--- 🚀 Starting WTT Events Scraper 🚀 --- \n",
       "    \n",
-      "Fetching events for 2025...\n",
+      "Fetching events for 2025...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Found 172 events from 2025\n",
       "✅ Data successfully saved to ../Data/Raw/Events//raw_events_2025.csv\n",
       "Fetching events for 2026...\n",
