--- a/01_Obtain_data/06_update_sponsors.ipynb
+++ b/01_Obtain_data/06_update_sponsors.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 128,
    "id": "e7aec68f-2be8-494a-b006-dd046f01e5f0",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 129,
    "id": "879bb05c",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 130,
    "id": "f962cdda",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 131,
    "id": "e2b2f78f-7de8-49c2-a2bb-237b58a37670",
    "metadata": {},
    "outputs": [],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 132,
    "id": "7c50eb17-9a28-477f-a299-eaf49af3efdd",
    "metadata": {},
    "outputs": [],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 133,
    "id": "caa44250-e151-4ca1-9ae5-59f06977ab17",
    "metadata": {},
    "outputs": [],
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 134,
    "id": "14bd5a73",
    "metadata": {},
    "outputs": [],
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 135,
    "id": "6773c65c",
    "metadata": {},
    "outputs": [
@@ -292,17 +292,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ 186 events found in latest INTERMEDIATE: ../Data/Processed/Events/Intermediate/20251106_intermediate_events.csv \n",
-      "✅ 186 events found in latest EVENTS_SPONSORS: ../Data/Processed/Sponsors/20251106_event_sponsors.csv \n",
+      "✅ 187 events found in latest INTERMEDIATE: ../Data/Processed/Events/Intermediate/20251110_intermediate_events.csv \n",
+      "✅ 186 events found in latest EVENTS_SPONSORS: ../Data/Processed/Sponsors/20251108_event_sponsors.csv \n",
       "--- 🟢 Commencing Sponsor Scrape 🟢---\n",
+      "Processing Event: 1/27 (ID: 3066)    \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Obtained Raw Sponsors API Data for 3066\n",
+      "Obtained Raw Sponsors API Data for 3191\n",
+      "\n",
+      "--- 🏓 Found new Ball Sponsor for Event ID: 3191 🏓---\n",
       "Obtained Raw Sponsors API Data for 2591\n",
       "Obtained Raw Sponsors API Data for 2537\n",
-      "Processing Event: 26/26 (ID: 2234)    \n",
+      "Processing Event: 27/27 (ID: 2234)    \n",
       "--- ✅ Scraping complete. Consolidating results... ---\n",
-      "--- Found 3 events with new sponsor data. ---\n",
-      "--- Combining 3 new sponsor records with existing data... ---\n",
-      "--- 🟢 Successfully saved 186 total sponsored events to ../Data/Processed/Sponsors/20251106_event_sponsors.csv 🟢---\n"
+      "--- Found 4 events with new sponsor data. ---\n",
+      "--- Combining 4 new sponsor records with existing data... ---\n",
+      "--- 🟢 Successfully saved 187 total sponsored events to ../Data/Processed/Sponsors/20251110_event_sponsors.csv 🟢---\n"
      ]
     }
    ],
@@ -444,544 +454,6 @@
     "        except Exception as e:\n",
     "            print(f\"--- ❌ FAILED to save updated sponsor file: {e} ---\")\n",
     "   \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1830bcee",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "eve"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
-   "id": "c8c780dc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "eventId",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "BallSponsor",
-         "rawType": "object",
-         "type": "unknown"
-        },
-        {
-         "name": "TableSponsor",
-         "rawType": "object",
-         "type": "unknown"
-        }
-       ],
-       "ref": "cb616a98-5527-4921-a036-b7defcaeedb3",
-       "rows": [
-        [
-         "0",
-         "2234",
-         null,
-         "Donic"
-        ],
-        [
-         "1",
-         "2345",
-         "DHS",
-         "San-Ei"
-        ],
-        [
-         "2",
-         "2346",
-         "Butterfly",
-         "DHS"
-        ],
-        [
-         "3",
-         "2410",
-         "DHS",
-         "Double Fish"
-        ],
-        [
-         "4",
-         "2411",
-         "DHS",
-         "Double Fish"
-        ],
-        [
-         "5",
-         "2473",
-         "Butterfly",
-         "Butterfly"
-        ],
-        [
-         "6",
-         "2479",
-         null,
-         "Stiga"
-        ],
-        [
-         "7",
-         "2480",
-         "DHS",
-         "Joola"
-        ],
-        [
-         "8",
-         "2484",
-         "DHS",
-         "Butterfly"
-        ],
-        [
-         "9",
-         "2487",
-         "DHS",
-         "Joola"
-        ],
-        [
-         "10",
-         "2489",
-         "DHS",
-         "Double Fish"
-        ],
-        [
-         "11",
-         "2502",
-         "DHS",
-         "Tibhar"
-        ],
-        [
-         "12",
-         "2503",
-         "DHS",
-         "Tibhar"
-        ],
-        [
-         "13",
-         "2504",
-         "DHS",
-         "Tibhar"
-        ],
-        [
-         "14",
-         "2510",
-         "DHS",
-         "Stag"
-        ],
-        [
-         "15",
-         "2516",
-         "Double Fish",
-         "DHS"
-        ],
-        [
-         "16",
-         "2519",
-         null,
-         "Butterfly"
-        ],
-        [
-         "17",
-         "2521",
-         "DHS",
-         "Butterfly"
-        ],
-        [
-         "18",
-         "2522",
-         "DHS",
-         "Butterfly"
-        ],
-        [
-         "19",
-         "2531",
-         "DHS",
-         "Stag"
-        ],
-        [
-         "20",
-         "2532",
-         "DHS",
-         "Double Fish"
-        ],
-        [
-         "21",
-         "2533",
-         "DHS",
-         "Double Fish"
-        ],
-        [
-         "22",
-         "2534",
-         "DHS",
-         "Stag"
-        ],
-        [
-         "23",
-         "2535",
-         "Double Fish",
-         "DHS"
-        ],
-        [
-         "24",
-         "2536",
-         "Double Fish",
-         "DHS"
-        ],
-        [
-         "25",
-         "2537",
-         null,
-         "DHS"
-        ],
-        [
-         "26",
-         "2539",
-         "DHS",
-         "Tibhar"
-        ],
-        [
-         "27",
-         "2540",
-         "Double Fish",
-         "Tibhar"
-        ],
-        [
-         "28",
-         "2541",
-         "Double Fish",
-         "Joola"
-        ],
-        [
-         "29",
-         "2542",
-         "Double Fish",
-         "DHS"
-        ],
-        [
-         "30",
-         "2568",
-         "DHS",
-         "Tibhar"
-        ],
-        [
-         "31",
-         "2569",
-         "Double Fish",
-         "Butterfly"
-        ],
-        [
-         "32",
-         "2570",
-         "Double Fish",
-         "DHS"
-        ],
-        [
-         "33",
-         "2574",
-         "DHS",
-         "Donic"
-        ],
-        [
-         "34",
-         "2576",
-         null,
-         "Butterfly"
-        ],
-        [
-         "35",
-         "2589",
-         "DHS",
-         "Tibhar"
-        ],
-        [
-         "36",
-         "2591",
-         null,
-         "DHS"
-        ],
-        [
-         "37",
-         "2592",
-         "Double Fish",
-         "DHS"
-        ],
-        [
-         "38",
-         "2593",
-         "Double Fish",
-         "DHS"
-        ],
-        [
-         "39",
-         "2603",
-         null,
-         "DHS"
-        ],
-        [
-         "40",
-         "2605",
-         "DHS",
-         "Stag"
-        ],
-        [
-         "41",
-         "2606",
-         "DHS",
-         "Butterfly"
-        ],
-        [
-         "42",
-         "2609",
-         null,
-         "Joola"
-        ],
-        [
-         "43",
-         "2611",
-         null,
-         "San-Ei"
-        ],
-        [
-         "44",
-         "2615",
-         null,
-         "DHS"
-        ],
-        [
-         "45",
-         "2619",
-         "Double Fish",
-         "DHS"
-        ],
-        [
-         "46",
-         "2627",
-         "DHS",
-         "Double Fish"
-        ],
-        [
-         "47",
-         "2629",
-         "Double Fish",
-         "DHS"
-        ],
-        [
-         "48",
-         "2630",
-         "Double Fish",
-         "Butterfly"
-        ],
-        [
-         "49",
-         "2658",
-         null,
-         "Donic"
-        ]
-       ],
-       "shape": {
-        "columns": 3,
-        "rows": 186
-       }
-      },
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>eventId</th>\n",
-       "      <th>BallSponsor</th>\n",
-       "      <th>TableSponsor</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2234</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Donic</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2345</td>\n",
-       "      <td>DHS</td>\n",
-       "      <td>San-Ei</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2346</td>\n",
-       "      <td>Butterfly</td>\n",
-       "      <td>DHS</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2410</td>\n",
-       "      <td>DHS</td>\n",
-       "      <td>Double Fish</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2411</td>\n",
-       "      <td>DHS</td>\n",
-       "      <td>Double Fish</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>181</th>\n",
-       "      <td>3133</td>\n",
-       "      <td>DHS</td>\n",
-       "      <td>Stiga</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>182</th>\n",
-       "      <td>3175</td>\n",
-       "      <td>DHS</td>\n",
-       "      <td>Double Fish</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>183</th>\n",
-       "      <td>3177</td>\n",
-       "      <td>Double Fish</td>\n",
-       "      <td>Butterfly</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>184</th>\n",
-       "      <td>3178</td>\n",
-       "      <td>Double Fish</td>\n",
-       "      <td>Butterfly</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>185</th>\n",
-       "      <td>3199</td>\n",
-       "      <td>Yinhe</td>\n",
-       "      <td>Stag</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>186 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     eventId  BallSponsor TableSponsor\n",
-       "0       2234          NaN        Donic\n",
-       "1       2345          DHS       San-Ei\n",
-       "2       2346    Butterfly          DHS\n",
-       "3       2410          DHS  Double Fish\n",
-       "4       2411          DHS  Double Fish\n",
-       "..       ...          ...          ...\n",
-       "181     3133          DHS        Stiga\n",
-       "182     3175          DHS  Double Fish\n",
-       "183     3177  Double Fish    Butterfly\n",
-       "184     3178  Double Fish    Butterfly\n",
-       "185     3199        Yinhe         Stag\n",
-       "\n",
-       "[186 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 107,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "final_sponsors_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
-   "id": "2fd36a01",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[3066,\n",
-       " 2959,\n",
-       " 2576,\n",
-       " 2707,\n",
-       " 2519,\n",
-       " 2905,\n",
-       " 2714,\n",
-       " 2717,\n",
-       " 2591,\n",
-       " 2937,\n",
-       " 2658,\n",
-       " 2787,\n",
-       " 2915,\n",
-       " 3109,\n",
-       " 2789,\n",
-       " 2916,\n",
-       " 2917,\n",
-       " 2537,\n",
-       " 2603,\n",
-       " 2670,\n",
-       " 2479,\n",
-       " 2609,\n",
-       " 2611,\n",
-       " 2615,\n",
-       " 2745,\n",
-       " 2234]"
-      ]
-     },
-     "execution_count": 108,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ids_to_scrape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
-   "id": "68e8b4cb",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{3066}"
-      ]
-     },
-     "execution_count": 109,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "missing_table_set"
    ]
   },
   {
