--- a/01_Obtain_data/07finalise_events.ipynb
+++ b/01_Obtain_data/07finalise_events.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 36,
    "id": "e7aec68f-2be8-494a-b006-dd046f01e5f0",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 37,
    "id": "103e9b90-7b06-432e-bc39-ffae6f36877e",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 38,
    "id": "31a97633-4e27-49dd-aec3-e0d6f68c72ef",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 39,
    "id": "e2b2f78f-7de8-49c2-a2bb-237b58a37670",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 40,
    "id": "44f11409",
    "metadata": {},
    "outputs": [],
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 41,
    "id": "6563ff43",
    "metadata": {},
    "outputs": [
@@ -227,11 +227,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ 186 events found in latest MASTER: ../Data/Master/Events/20251106__master_events.csv \n",
-      "✅ 186 events found in latest INTERMEDIATE: ../Data/Processed/Events/Intermediate/20251106_intermediate_events.csv \n",
-      "✅ 186 events found in latest EVENTS_SPONSORS: ../Data/Processed/Sponsors/20251106_event_sponsors.csv \n",
+      "✅ 187 events found in latest MASTER: ../Data/Master/Events/20251110__master_events.csv \n",
+      "✅ 187 events found in latest INTERMEDIATE: ../Data/Processed/Events/Intermediate/20251110_intermediate_events.csv \n",
+      "✅ 187 events found in latest EVENTS_SPONSORS: ../Data/Processed/Sponsors/20251110_event_sponsors.csv \n",
       "--- 🟢 Enriching Intermdiate file with sponsors 🟢---\n",
-      "--- 🟢 Successfully saved 186 total events to ../Data/Master/Events/20251106__master_events.csv 🟢---\n"
+      "--- 🟢 Successfully saved 187 total events to ../Data/Master/Events/20251110__master_events.csv 🟢---\n"
      ]
     }
    ],
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 42,
    "id": "bcfa423a",
    "metadata": {},
    "outputs": [
@@ -366,7 +366,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "81f2f8fa-1cdf-4fcb-aed9-484ce9a2e852",
+       "ref": "ea5b65cf-c026-4c34-8bf4-459707df68a5",
        "rows": [
         [
          "0",
@@ -1071,7 +1071,7 @@
        ],
        "shape": {
         "columns": 11,
-        "rows": 186
+        "rows": 187
        }
       },
       "text/html": [
@@ -1192,20 +1192,6 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>181</th>\n",
-       "      <td>China Smash 2025 Presented by Beijing Shijings...</td>\n",
-       "      <td>WTT Grand Smash</td>\n",
-       "      <td>China</td>\n",
-       "      <td>Beijing</td>\n",
-       "      <td>asia</td>\n",
-       "      <td>3098</td>\n",
-       "      <td>Completed</td>\n",
-       "      <td>2025-09-25</td>\n",
-       "      <td>2025-10-05</td>\n",
-       "      <td>Double Fish</td>\n",
-       "      <td>DHS</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>182</th>\n",
        "      <td>WTT Star Contender London 2025</td>\n",
        "      <td>WTT Star Contender</td>\n",
@@ -1241,7 +1227,7 @@
        "      <td>Frankfurt</td>\n",
        "      <td>europe</td>\n",
        "      <td>3100</td>\n",
-       "      <td>Ongoing</td>\n",
+       "      <td>Completed</td>\n",
        "      <td>2025-11-04</td>\n",
        "      <td>2025-11-09</td>\n",
        "      <td>DHS</td>\n",
@@ -1255,61 +1241,75 @@
        "      <td>Vila Nova de Gaia</td>\n",
        "      <td>europe</td>\n",
        "      <td>3066</td>\n",
-       "      <td>Ongoing</td>\n",
+       "      <td>Completed</td>\n",
        "      <td>2025-11-05</td>\n",
        "      <td>2025-11-09</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Butterfly</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>186</th>\n",
+       "      <td>WTT Feeder Gdansk 2025</td>\n",
+       "      <td>WTT Feeder</td>\n",
+       "      <td>Poland</td>\n",
+       "      <td>Gdansk</td>\n",
+       "      <td>europe</td>\n",
+       "      <td>3191</td>\n",
+       "      <td>Ongoing</td>\n",
+       "      <td>2025-11-10</td>\n",
+       "      <td>2025-11-14</td>\n",
+       "      <td>Yinhe</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>186 rows × 11 columns</p>\n",
+       "<p>187 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                             EventName  \\\n",
-       "0                              WTT Contender Doha 2021   \n",
-       "1              WTT Star Contender Doha 2021 (Mar 2021)   \n",
-       "2                             Tokyo 2020 Olympic Games   \n",
-       "3                          WTT Contender Budapest 2021   \n",
-       "4                   2021 ITTF Czech International Open   \n",
-       "..                                                 ...   \n",
-       "181  China Smash 2025 Presented by Beijing Shijings...   \n",
-       "182                     WTT Star Contender London 2025   \n",
-       "183                     WTT Champions Montpellier 2025   \n",
-       "184                       WTT Champions Frankfurt 2025   \n",
-       "185                  WTT Feeder Vila Nova de Gaia 2025   \n",
+       "                                   EventName                EventType  \\\n",
+       "0                    WTT Contender Doha 2021            WTT Contender   \n",
+       "1    WTT Star Contender Doha 2021 (Mar 2021)       WTT Star Contender   \n",
+       "2                   Tokyo 2020 Olympic Games            Olympic Games   \n",
+       "3                WTT Contender Budapest 2021            WTT Contender   \n",
+       "4         2021 ITTF Czech International Open  ITTF International Open   \n",
+       "..                                       ...                      ...   \n",
+       "182           WTT Star Contender London 2025       WTT Star Contender   \n",
+       "183           WTT Champions Montpellier 2025            WTT Champions   \n",
+       "184             WTT Champions Frankfurt 2025            WTT Champions   \n",
+       "185        WTT Feeder Vila Nova de Gaia 2025               WTT Feeder   \n",
+       "186                   WTT Feeder Gdansk 2025               WTT Feeder   \n",
        "\n",
-       "                   EventType   Country               City ContinentCode  \\\n",
-       "0              WTT Contender     Qatar               Doha          asia   \n",
-       "1         WTT Star Contender     Qatar               Doha          asia   \n",
-       "2              Olympic Games     Japan             Tokyo           asia   \n",
-       "3              WTT Contender   Hungary           Budapest        europe   \n",
-       "4    ITTF International Open   Czechia            Olomouc        europe   \n",
-       "..                       ...       ...                ...           ...   \n",
-       "181          WTT Grand Smash     China            Beijing          asia   \n",
-       "182       WTT Star Contender   England             London        europe   \n",
-       "183            WTT Champions    France        Montpellier        europe   \n",
-       "184            WTT Champions   Germany          Frankfurt        europe   \n",
-       "185               WTT Feeder  Portugal  Vila Nova de Gaia        europe   \n",
+       "      Country               City ContinentCode  eventId EventStatus  \\\n",
+       "0       Qatar               Doha          asia     2410   Completed   \n",
+       "1       Qatar               Doha          asia     2411   Completed   \n",
+       "2       Japan             Tokyo           asia     2345   Completed   \n",
+       "3     Hungary           Budapest        europe     2487   Completed   \n",
+       "4     Czechia            Olomouc        europe     2480   Completed   \n",
+       "..        ...                ...           ...      ...         ...   \n",
+       "182   England             London        europe     3110   Completed   \n",
+       "183    France        Montpellier        europe     3099   Completed   \n",
+       "184   Germany          Frankfurt        europe     3100   Completed   \n",
+       "185  Portugal  Vila Nova de Gaia        europe     3066   Completed   \n",
+       "186    Poland             Gdansk        europe     3191     Ongoing   \n",
        "\n",
-       "     eventId EventStatus   StartDate     EndDate  BallSponsor TableSponsor  \n",
-       "0       2410   Completed  2021-02-28  2021-03-06          DHS  Double Fish  \n",
-       "1       2411   Completed  2021-03-05  2021-03-13          DHS  Double Fish  \n",
-       "2       2345   Completed  2021-07-23  2021-08-08          DHS       San-Ei  \n",
-       "3       2487   Completed  2021-08-15  2021-08-20          DHS        Joola  \n",
-       "4       2480   Completed  2021-08-21  2021-08-25          DHS        Joola  \n",
-       "..       ...         ...         ...         ...          ...          ...  \n",
-       "181     3098   Completed  2025-09-25  2025-10-05  Double Fish          DHS  \n",
-       "182     3110   Completed  2025-10-21  2025-10-26          DHS        Donic  \n",
-       "183     3099   Completed  2025-10-28  2025-11-02       Tibhar       Tibhar  \n",
-       "184     3100     Ongoing  2025-11-04  2025-11-09          DHS        Donic  \n",
-       "185     3066     Ongoing  2025-11-05  2025-11-09          NaN          NaN  \n",
+       "      StartDate     EndDate BallSponsor TableSponsor  \n",
+       "0    2021-02-28  2021-03-06         DHS  Double Fish  \n",
+       "1    2021-03-05  2021-03-13         DHS  Double Fish  \n",
+       "2    2021-07-23  2021-08-08         DHS       San-Ei  \n",
+       "3    2021-08-15  2021-08-20         DHS        Joola  \n",
+       "4    2021-08-21  2021-08-25         DHS        Joola  \n",
+       "..          ...         ...         ...          ...  \n",
+       "182  2025-10-21  2025-10-26         DHS        Donic  \n",
+       "183  2025-10-28  2025-11-02      Tibhar       Tibhar  \n",
+       "184  2025-11-04  2025-11-09         DHS        Donic  \n",
+       "185  2025-11-05  2025-11-09         NaN    Butterfly  \n",
+       "186  2025-11-10  2025-11-14       Yinhe          NaN  \n",
        "\n",
-       "[186 rows x 11 columns]"
+       "[187 rows x 11 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
