--- a/01_Obtain_data/08_get_match_details.ipynb
+++ b/01_Obtain_data/08_get_match_details.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "id": "6b289dee",
    "metadata": {},
    "outputs": [],
@@ -19,12 +19,13 @@
     "import asyncio\n",
     "from typing import Tuple, Optional, List, Dict, Any, Set\n",
     "from pydantic import BaseModel, ValidationError, Field\n",
-    "import aiohttp"
+    "import aiohttp\n",
+    "import sys"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "id": "b2bc0118",
    "metadata": {},
    "outputs": [],
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "id": "81958106",
    "metadata": {},
    "outputs": [],
@@ -79,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "id": "35d87592",
    "metadata": {},
    "outputs": [],
@@ -134,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "id": "f2217cc1",
    "metadata": {},
    "outputs": [],
@@ -190,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "id": "513ebc5c",
    "metadata": {},
    "outputs": [],
@@ -255,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "id": "fa5cc26b",
    "metadata": {},
    "outputs": [],
@@ -338,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "id": "0886baa0",
    "metadata": {},
    "outputs": [],
@@ -404,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "id": "76f38044",
    "metadata": {},
    "outputs": [],
@@ -427,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "id": "edda540a",
    "metadata": {},
    "outputs": [],
@@ -477,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "id": "b60e57f6",
    "metadata": {},
    "outputs": [
@@ -485,12 +486,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ 186 events found in latest MASTER: ../Data/Master/Events/20251106__master_events.csv \n",
+      "✅ 187 events found in latest MASTER: ../Data/Master/Events/20251110__master_events.csv \n",
       "--- 🟠 Finding  all event ids and payloads from ../Data/Processed/Singles_match_payloads ---\n",
-      "--- ✅ All desired payloads: Found 24542 total unique matches to scrape. ---\n",
+      "--- ✅ All desired payloads: Found 24665 total unique matches to scrape. ---\n",
       "--- 🟠 Finding already obtained match details from ../Data/Raw/Match_details ---\n",
-      "--- ✅ Found 24542 total unique match details across 186 files. ---\n",
-      "--- ✅ Unique Events with Data: 186 ---\n",
+      "--- ✅ Found 24665 total unique match details across 187 files. ---\n",
+      "--- ✅ Unique Events with Data: 187 ---\n",
       "\n",
       "🏓 Matches to scrape: 0 across 0 events 🏓\n",
       "\n",
@@ -650,174 +651,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "21ed3fc0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "24542"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(already_obtained_matches)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "id": "11c97e59",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ 186 events found in latest MASTER: ../Data/Master/Events/20251106__master_events.csv \n",
-      "--- 🟠 Finding  all event ids and payloads from ../Data/Processed/Singles_match_payloads ---\n",
-      "--- ✅ All desired payloads: Found 24542 total unique matches to scrape. ---\n",
-      "--- 🟠 Finding already obtained match details from ../Data/Raw/Match_details ---\n",
-      "--- ✅ Found 24542 total unique match details across 186 files. ---\n",
-      "--- ✅ Unique Events with Data: 186 ---\n",
-      "\n",
-      "🏓 Matches to scrape: 0 across 0 events 🏓\n",
-      "\n",
-      "==================================================\n",
-      "--- ✅🏓🟢 Scraping Complete. All tasks finished successfully. 🟢🏓✅---\n",
-      "Total successful matches collected: 0\n",
-      "Total Wall Clock Time: 0.00 seconds.\n",
-      "\n",
-      "--- ✅ All successful events Saveed. (0 files) ---\n"
-     ]
-    }
-   ],
-   "source": [
-    "if __name__ == \"__main__\": \n",
-    "    \n",
-    "    # Get the latest master events file\n",
-    "\n",
-    "    latest_master_df, latest_master_file = get_latest_master_events(MASTER_EVENTS_DIR, MASTER_EVENTS_REGEX)\n",
-    "    if latest_master_df.empty:\n",
-    "        print(f\"❌ Exiting: No existing Master Events File available\")\n",
-    "        sys.exit(1)\n",
-    "    \n",
-    "    # get all payloads that could be scraped for match details\n",
-    "    # compare this to matches already obtained, leaving only payloads left to be scraped!Q\n",
-    "\n",
-    "    all_payloads = get_all_payloads(SINGLES_PAYLOADS_DIR)\n",
-    "    already_obtained_matches = get_obtained_match_details(RAW_MATCH_DETAILS_DIR)\n",
-    "\n",
-    "    intitial_matches_to_scrape = list(set(all_payloads) - set(already_obtained_matches))\n",
-    "    intitial_matches_to_scrape_count = len(intitial_matches_to_scrape)\n",
-    "    intitial_events_to_scrape_count = len(set([match_tuple[0] for match_tuple in intitial_matches_to_scrape]))\n",
-    "    print(f\"\\n🏓 Matches to scrape: {intitial_matches_to_scrape_count} across {intitial_events_to_scrape_count} events 🏓\")\n",
-    "    \n",
-    "    # Get the initial list of tasks / matches to be scraped\n",
-    "    \n",
-    "    matches_to_scrape = intitial_matches_to_scrape \n",
-    "    # List to hold ALL successful  and failed results from all attempts\n",
-    "    all_successful_data = []    \n",
-    "    failures = [] \n",
-    "    # set retries count to 0 \n",
-    "    retries = 0\n",
-    "    # Start total timer\n",
-    "    global_start_time = time.time() \n",
-    "\n",
-    "    # while loop - keep trying if there are still matches to get or until max retries count is reached\n",
-    "    while (retries < MAX_RETRIES) and bool(matches_to_scrape):\n",
-    "        retries += 1 # Increment attempt counter (Attempt 1, 2, ...)\n",
-    "        \n",
-    "        # print intial scraping started\n",
-    "        if retries == 1:\n",
-    "            print(f\"--- 🚀 Starting initial scrape for {len(matches_to_scrape)} matches... ---\")\n",
-    "        else:\n",
-    "            # log if a retry has started\n",
-    "            print(f\"\\n--- 🔄 Starting Retry {retries-1}/{MAX_RETRIES-1} for {len(matches_to_scrape)} remaining matches... ---\")\n",
-    "        \n",
-    "        # start scraping and log retry start time (useful if one retry goes awry)\n",
-    "        attempt_start_time = time.time()\n",
-    "        \n",
-    "        # run the async fetching \n",
-    "        successes, failures = await (main_scraper(tuples_to_scrape=matches_to_scrape))\n",
-    "        \n",
-    "        \n",
-    "        # process results as they finish\n",
-    "        \n",
-    "        # Add new successes to the successes list \n",
-    "        all_successful_data.extend(successes)\n",
-    "        \n",
-    "        # after each retry - update new matches to scrape list for next loop\n",
-    "\n",
-    "        matches_to_scrape = [(event_id, match_code)for event_id, match_code, error_msg in failures]\n",
-    "        \n",
-    "        # log results of the retry attempt dependent on success / fails\n",
-    "        attempt_duration = time.time() - attempt_start_time\n",
-    "        if successes: \n",
-    "            print(f\"--- Attempt {retries} finished in {attempt_duration:.2f}s. Got {len(successes)} new results. ---\")\n",
-    "        if failures: \n",
-    "            print(f\"--- {len(failures)} tasks failed and will be retried. ---\")\n",
-    "\n",
-    "\n",
-    "    # Final Printing summary (OUTSIDE MAIN LOOP) \n",
-    "    print(\"\\n\" + \"=\" * 50)\n",
-    "    \n",
-    "    # if no matches left to scrape, then  log success :) \n",
-    "    if not matches_to_scrape: \n",
-    "        print(\"--- ✅🏓🟢 Scraping Complete. All tasks finished successfully. 🟢🏓✅---\")\n",
-    "    else:\n",
-    "        # 'failures' holds the leftover failures  from the LAST attempt\n",
-    "        print(f\"--- ⚠️ Scraping Complete. {len(failures)} tasks permanently failed after {MAX_RETRIES} attempts. ---\")\n",
-    "        \n",
-    "    print(f\"Total successful matches collected: {len(all_successful_data)}\")\n",
-    "    total_duration = time.time() - global_start_time\n",
-    "    print(f\"Total Wall Clock Time: {total_duration:.2f} seconds.\")\n",
-    "\n",
-    "    # group all data \n",
-    "    grouped_details = group_match_details(all_successful_data) \n",
-    "    # log events saved (useful if errors occur)\n",
-    "    events_saved_count = 0 \n",
-    "\n",
-    "    for event_id, match_list in grouped_details.items():\n",
-    "        output_filename = os.path.join(RAW_MATCH_DETAILS_DIR, f\"{event_id}_match_details.json\")\n",
-    "        \n",
-    "        try:\n",
-    "            with open(output_filename, 'w') as f:\n",
-    "                json.dump(match_list, f, indent=4)\n",
-    "            \n",
-    "            events_saved_count += 1\n",
-    "            print(f\"✅ Saved Event {event_id}: {len(match_list)} matches.\")\n",
-    "            \n",
-    "        except Exception as e:\n",
-    "            print(f\"❌ ERROR saving Event {event_id}: {type(e).__name__}\".ljust(80))\n",
-    "\n",
-    "    print(f\"\\n--- ✅ All successful events Saveed. ({events_saved_count} files) ---\")\n",
-    "\n",
-    "    # if failures exists, print and save for future reference\n",
-    "    if failures: \n",
-    "        failures_df = pd.DataFrame(failures, columns=[\"eventId\", \"matchCode\",\"failureReason\"])\n",
-    "        try:\n",
-    "            # Save the failures to a csv for reference\n",
-    "            failures_df.to_csv(FAILURE_LOG_PATH, index=False)\n",
-    "            \n",
-    "            print(f\"--- ✅ Failure log saved for {len(failures_df)} tasks to {FAILURE_LOG_PATH} ---\")\n",
-    "            \n",
-    "        except Exception as e:\n",
-    "            print(f\"--- ❌ FAILED to save failure log: {e} ---\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "70c80a1c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cle"
+   ]
   }
  ],
  "metadata": {
